<resources>
    <string name="app_name">HW1</string>
    <string name="LeftArrow"><![CDATA[<]]></string>
    <string name="RightArrow"><![CDATA[>]]></string>
    <string name="game_title">Cops And Robbers</string>
    <string name="tilt_switch_text">tilt</string>
    <string name="button_switch_text">button</string>
    <string name="game_mode_switch_text">Game Mode</string>
    <string name="game_speed_switch_text">Game Speed</string>
    <string name="switch_speed_fast">fast</string>
    <string name="switch_speed_slow">slow</string>
    <string name="start_BTN_text">Start</string>
    <string name="records_BTN_text">Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_text">please enter your location</string>
    <string name="send">Send</string>
    <string name="main_menu">Main Menu</string>
    <string name="score_0">Score: 0</string>
</resources>